2002-09-11  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_file_put): (+ various files)
	  updated writing support to support mpio_fatentry_t
	
2002-09-10  Markus Germeier  <mager@tzi.de>

	* libmpio/io.c (mpio_io_block_write): 
	  write FAT entry for internal mem
	* libmpio/fat.c (mpio_fat_internal_find_fileindex): added function

2002-09-10  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_memory_format): 
	  formatting works for internal and external memory now
	  BEWARE: No config files are written, you might ruin your
	  player!!!
	* libmpio/mpio.c   (mpio_file_del): 
	  deleting works for internal and external memory now (BEWARE !!!)
	* support for deleting/formatting added to various parts of
	  fat.c and io.c

2002-09-10  Markus Germeier  <mager@tzi.de>

	* libmpio/fat.c (mpio_fatentry_set_free) 
	(mpio_fatentry_set_defect): added functions
	* libmpio/io.c (mpio_io_block_delete): 
	  return negative status value in case of error
	* libmpio/mpio.c (mpio_memory_format): 
	  mark block/cluster defect in FAT if an error occurs during format
	* libmpio/mpio.c (mpio_file_del): 
	  changed function to support new mpio_fatentry_t

2002-09-09  Markus Germeier  <mager@tzi.de>

	* libmpio/io.c (fatentry2hw): added function
	(mpio_io_block_read, mpio_io_block_delete): 
	  use fatentry2hw

2002-09-09  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_memory_format): 
	  updated code to format external SmartMedia cards
	* libmpio/fat.c (mpio_fatentry_plus_plus, mpio_bootblocks_read): 
	  fixed max_cluster issues
	
2002-09-09  Markus Germeier  <mager@tzi.de>

	* libmpio/io.c (cluster2block): 
	  fixed cluster to block mapping for 32MB SmartMedia cards
	* libmpio/io.c (mpio_io_block_read, mpio_io_sector_read): 
	  added debug output in case of ECC error
	* libmpio/mpio.c (mpio_memory_free): 
	  fixed segmentation violation if no SM card is inserted
	* libmpio/mpio.c (mpio_get_info): 
	  *really* fixed the problem if no SM card is inserted
	