@@ -1,4 +1,4 @@
-$Id: TODO,v 1.8 2002/09/11 00:18:34 germeier Exp $
+$Id: TODO,v 1.9 2002/09/11 11:55:36 germeier Exp $
 
 * Kernel Module
   - the MPIO can no multitasking, so:
@@ -15,7 +15,7 @@ $Id: TODO,v 1.8 2002/09/11 00:18:34 germeier Exp $
   - implement reading of files [DONE]
   - implement writing of files [partially done]
 	* writing to internal memory
-	* resolve remainig block addressing issues in ECC area
+	* resolve remainig block addressing issues in spare area [DONE]
 	* fix 8.3 filenames
 	* fix timestamps of files
   - implement deleting of files [DONE]
