@@ -1,5 +1,13 @@
 2002-09-11  Markus Germeier  <mager@tzi.de>
 
+	* libmpio/io.c (cluster2blockaddress): added function
+	(mpio_io_block_write, mpio_io_sector_write): 
+	  fixed block address in spare area
+	(mpio_io_block_read): 
+	  check block address and give debug output if address differs
+
+2002-09-11  Markus Germeier  <mager@tzi.de>
+
 	* libmpio/mpio.c (mpio_file_put): (+ various files)
 	  updated writing support to support mpio_fatentry_t
 	
